# Hel-Logging

./: .gitignore  .gitmodules  CMakeLists.txt  HelLogger.cpp  README.md  library.h  logger.cpp  logger.h  wrapper.cpp  wrapper.h
include/1.0.0-Release/HelLogger/: HelLogger.h
submodules/spdlog/: .gitignore  CMakeLists.txt
submodules/spdlog/cmake/: spdlogCPack.cmake
submodules/spdlog/include/spdlog/: common.h
submodules/spdlog/include/spdlog/details/: os-inl.h
submodules/spdlog/include/spdlog/sinks/: msvc_sink.h
submodules/spdlog/tests/: CMakeLists.txt
test/: main.cpp
